<resources>
    <string name="app_name">Zerodata</string>
    <string name="platform">android</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="confirm_verification">Confirm Verification</string>
    <string name="cnt">Continue</string>
    <string name="forgot_password">Forgot your Password</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="overview">Overview</string>
    <string name="connect">Connect</string>
    <string name="rules">Rules</string>
    <string name="catalogue">Catalogue</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="you_re_protected">You\'re Protected</string>
    <string name="not_protected">Not Protected</string>
    <string name="text_protected">Protected</string>
    <string name="notify_me_of_malicious_activities">Notify me of malicious internet activity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings_updated">Settings updated.</string>
    <string name="profile_updated">Profile updated.</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="code">Code</string>
    <string name="error_empty_name">First Name cannot be empty.</string>
    <string name="error_empty_last_name">Last Name cannot be empty.</string>
    <string name="error_enter_email">Enter an email address.</string>
    <string name="error_enter_valid_email">Enter a valid email address.</string>
    <string name="error_enter_phone_number">Enter phone number.</string>
    <string name="error_enter_code">Enter code.</string>
    <string name="error_enter_valid_code">Enter a valid code.</string>
    <string name="error_enter_valid_phone_number">Enter a valid phone number.</string>
    <string name="error_network_connectivity">Ensure your mobile data is turned on or you are connected to wifi</string>
    <string name="error_enter_password">Enter a password.</string>
    <string name="error_short_password">Password can\'t be less than 5 characters</string>
    <string name="password_dont_match">Passwords don\'t match</string>
    <string name="you_were_protected_from">You were protected from</string>
    <string name="you_were_exposed_to">You were exposed to</string>
    <string name="malware">Malware Threats</string>
    <string name="phishing">Phishing Threats</string>
    <string name="_24_hrs">24 Hrs</string>
    <string name="_7_days">7 Days</string>
    <string name="_30_days">30 Days</string>
    <string name="protect_me">You\'re not protected</string>
    <string name="blocked">Blocked</string>
    <string name="allowed">Allowed</string>
    <string name="categories">Categories</string>
    <string name="enter_domain">Enter a domain name</string>
    <string name="show_only_blocked">Show only blocked categories</string>
    <string name="error_enter_domain">Enter a domain name.</string>
    <string name="error_valid_domain">Enter a valid domain name.</string>
    <string name="logout">Logout</string>
    <string name="status_distribution">Status Distribution</string>
    <string name="top_domains">Top Domains</string>
    <string name="top_content">Top Content Categories</string>
    <string name="top_customers">Top Customers</string>
    <string name="top_security">TOP SECURITY CATEGORIES</string>
    <string name="top_malicious_customers">TOP MALICIOUS CUSTOMERS</string>
    <string name="time_series_hour">Hourly</string>
    <string name="time_series_min">Minutes</string>
    <string name="block">Block</string>
    <string name="no_blocked_domains">Block inappropriate content and websites by age for all your devices.</string>
    <string name="allow">Allow</string>
    <string name="no_allowed_domains">Allow appropriate content and websites by age for all your devices.</string>
    <string name="get_started">Get Started</string>
    <string name="intro_one_title"><![CDATA[Browse Data Free]]></string>
    <string name="intro_two_title">Easy Toggle.</string>
    <string name="intro_three_title">Get updates on free services</string>
    <string name="intro_four_title">You Earn. They Earn!</string>
    <string name="intro_one_desc">Browse sites and apps without using your data plan.</string>
    <string name="intro_two_desc">Turning on and off is just a toggle. It\'s a vibe.</string>
    <string name="intro_three_desc">We work with partners to make more sites available.</string>
    <string name="intro_four_desc">Refer your friend. You &amp; your friend each earn 50MB.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_text">Welcome to Zerodata by Simplifyd</string>
    <string name="welcome_text_">Welcome to Zerodata</string>
    <string name="welcome_back">Welcome back to Zerodata</string>
    <string name="filter_by">Filter by</string>
    <string name="blocked_categories">Blocked Categories</string>
    <string name="search">Search</string>
    <string name="content_request_distribution">Content Request Distribution</string>
    <string name="content_request_time_distribution">Content Request Time Distribution</string>
    <string name="domain">Domain</string>
    <string name="request_count_label">Requests</string>
    <string name="no_data">There\'s no data to display here.</string>
    <string name="activity">Activity</string>
    <string name="agenda">Agenda</string>
    <string name="all_events">All events</string>
    <string name="your_connection_is_not_secure">Your connection is not secure</string>
    <string name="agenda_warning">Attackers may try to steal your information such as passwords, messages or credit cards on this website.</string>
    <string name="block_connection">Block connection</string>
    <string name="category">Category</string>
    <string name="account_verification">Account verification code</string>
    <string name="account_verification_details">Enter the verification code we just sent to your phone number</string>
    <string name="verification_success">Verification Successful</string>
    <string name="update_message">Update your app to have access to more benefits of Zerodata</string>
    <string name="cnt_zerodata">Continue to start using Zerodata</string>
    <string name="update">Update App</string>
    <string name="phonenumber">0800 000 0000</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="protection_count_text"><![CDATA[In the last 30 days, Simplifyd has protected you from <b>%1$d</b> Threats <br/><br/><font color=\'#C60505\'>How does Simplifyd work?</font>]]></string>
    <string name="data_count_text"><![CDATA[In the last 30 days, Zerodata has saved you <b>%1$d</b>   <br/><br/>]]></string>
    <string name="how_does_simplifyd_work_we"><![CDATA[<font color=\'#C60505\'>How does Zerodata work?</font><br/><br/> We route your internet through datafree network configurations.]]></string>
    <string name="how_long_disable">How long do you want to disbale Zerodata for?</string>
    <string name="pause_for_fifteen_minutes">Pause for 15 minutes</string>
    <string name="pause_for_hour">Pause for 1 hour</string>
    <string name="disable_zerodata">Disable Zerodata</string>
    <string name="data_not_free">Your internet usage is not data free.</string>
    <string name="internet_not_free">Your internet usage is not data free.</string>
    <string name="internet_free">Your internet usage is data free.</string>
    <string name="paused">Paused</string>
    <string name="connecting">Connecting</string>
    <string name="checking_network_availability">Checking network</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="view_portal">View Portal</string>
    <string name="sign_out">Sign out</string>
    <string name="zerodata_url">https://zerodata.app/</string>
    <string name="not_on_partner_network">You are currently not on a partner network</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="verification_desc">We texted your code to %s</string>
    <string name="resend_code_in"> <![CDATA[
        <font color=#4A64FF>Resend in</font> <font color=#4A64FF>%1$s</font>
    ]]>
    </string>
    <string name="connected_text">Zerodata mode is on. Browse apps data-free</string>
    <string name="unconnected_text">Zerodata mode is off. Connect to browse data-free</string>
    <string name="tap_here">Tap Here</string>
    <string name="continue_using_zerodata">Continue using Zerodata</string>
    <string name="search_for_country">Search for country here</string>
    <string name="search_app">Search app here</string>
    <string name="older_version">You are using an older version of Zerodata</string>
    <string name="download_latest_version">Click on the button below to download the latest version.</string>
    <string name="click_download_new_version">Download latest version</string>
    <string name="disconnect_zerodata">Are you sure you want to disconnect Zerodata?</string>
    <string name="disconnect_zerodata_desc">Disconnecting Zerodata will result to browsing with your mobile data.</string>
    <string name="welcome_zerodata">Welcome to Zerodata</string>
    <string name="welcome_zerodata_desc">Browse sites and apps without using your data plan.</string>
    <string name="not_supported_network">You’re not on a supported network</string>
    <string name="notsupported_network_desc">We only support the following networks for now</string>
    <string name="offline">You are offline</string>
    <string name="offline_desc">Turn on your mobile data to use the Zerodata app</string>
    <string name="zerodata_free">Zerodata will not use your data. Browsing is 100% free</string>
    <string name="data_saved">Data saved</string>
    <string name="connection_time">Connection time</string>
    <string name="data_saved_val">%.2f MB</string>
    <string name="no_referral_code">I don\'t have a referral code</string>
    <string name="continue_">Continue</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="referral_code_optional">Referral code (Optional)</string>
    <string name="referral_code_desc">Enter the code below to get a 100MB. You can also invite more people to get more data.</string>
    <string name="have_referral_code">Have a referral code?</string>
    <string name="sign_you_in">Let’s sign you in</string>
    <string name="sign_you_in_desc">Enter your phone number below to sign into a data free internet</string>
    <string name="number">Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="edit">Edit</string>
    <string name="code_sent">Enter the code sent to your phone number</string>
    <string name="didnt_get_code">Didn\'t get the code?</string>
    <string name="verify_number">Verify Number</string>
    <string name="no_cancel">No, Cancel</string>
    <string name="refer_friend">Refer a friend</string>
    <string name="supported_apps">Supported Apps &amp; Websites</string>
    <string name="all">All</string>
    <string name="social">Social</string>
    <string name="entertainment">Entertainment</string>
    <string name="books_ref">Books &amp; Reference</string>
    <string name="sports">Sports</string>
    <string name="news">News</string>
</resources>