<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/three_space"
    android:orientation="vertical"
    tools:context=".ui.main.notification.NotificationDetailFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_space"
        android:text="@string/welcome_zerodata"
        android:textStyle="bold"
        android:theme="@style/Theme.Simplifyd.Semi.Bold.Black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_space"
        android:lineSpacingMultiplier="1.5"
        android:maxLines="2"
        style="@style/Theme.Simplifyd.Normal.Gray"
        android:paddingEnd="@dimen/two_space"
        android:text="@string/intro_one_desc"
        android:textSize="@dimen/text_12" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/Theme.Simplifyd.ActionButton"
        android:layout_width="match_parent"
        android:text="@string/get_started"
        android:layout_marginTop="@dimen/four_space"
        />

</LinearLayout>