<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/brand_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_space"
            android:text="@string/sign_in"
            android:textSize="@dimen/text_24"
            android:textStyle="bold"
            android:theme="@style/Theme.Simplifyd.BoldIntroText"
            app:layout_constraintEnd_toEndOf="@+id/ivBankLogo"
            app:layout_constraintStart_toStartOf="@id/ivBankLogo"
            app:layout_constraintTop_toBottomOf="@+id/ivBankLogo"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:layout_marginTop="@dimen/one_space"
            android:textSize="@dimen/text_14"
            app:layout_constraintEnd_toEndOf="@+id/ivBankLogo"
            app:layout_constraintStart_toStartOf="@id/ivBankLogo"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="12dp"
            android:text="@string/submit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:letterSpacing=".03"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/forgot_password" />
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>