<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <ScrollView
        android:id="@+id/scrollableParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:context=".ui.auth.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

<!--                <ImageView-->
<!--                    android:id="@+id/ic_back"-->
<!--                    android:layout_width="24dp"-->
<!--                    android:layout_height="24dp"-->
<!--                    android:layout_marginTop="8dp"-->
<!--                    android:contentDescription="@string/brand_logo"-->
<!--                    android:src="@drawable/ic_back" />-->

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/brand_logo"
                    android:src="@drawable/ic_back" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/app_logo_width"
                    android:layout_height="@dimen/app_logo_height"
                    android:contentDescription="@string/brand_logo"
                    android:src="@drawable/ic_app_zerodata_black" />

                <Space
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>


            <ImageView
                android:id="@+id/intro_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_verification_lock" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four_space"
                android:text="@string/account_verification"
                android:textSize="@dimen/text_24"
                android:textStyle="bold"
                android:theme="@style/Theme.Simplifyd.BoldIntroText" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_space"
                android:gravity="center"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/account_verification_details"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/six_space"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/phone_number"
                android:textSize="@dimen/text_16" />


            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/one_space"
                android:text="@string/phonenumber"
                android:textSize="@dimen/text_16"
                android:textStyle="bold"
                android:theme="@style/Theme.Simplifyd.BoldIntroText" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_space"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/code"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/confirm_verification"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:cornerRadius="12dp" />
        </LinearLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>